# sw-rasterizer

./: .gitignore  Makefile  meson.build
src/: camera.cpp  camera.h  main.cpp  meson.build
src/include/swrast/: error.hpp  memory.hpp  swrast.h  swrast_private.h  utils.h
src/include/swrast/render/: RenderPrimitive.h  render.h
src/include/swrast/state/: Framebuffer.h  IndexBuffer.h  ObjectHandleFromId.hpp  Program.h  State.h  Texture.h  VertexArray.h  VertexBuffer.h
src/swrast/: meson.build  utils.cpp
src/swrast/render/: RenderPrimitive.cpp  TrianglePrimitive.cpp  render.cpp
src/swrast/state/: Framebuffer.cpp  IndexBuffer.cpp  Program.cpp  State.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
subprojects/: imguiwrapper.wrap  imwidgets.wrap  ren_utils.wrap
