project('PGR project - SW rasterizer', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3',
                     'cpp_std=c++20'])

proj_deps = [
  dependency('imguiwrapper', default_options : []),
  dependency('ren_utils'),
  dependency('imwidgets'),
]

proj_name = 'main'
subdir('src')
